# pp-service

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.migrator  Dockerfile.prod  LEADERBOARD.md  PocketPair_API.postman_collection.json  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  justfile  postman.json
.cargo/: audit.toml
crates/api/: Cargo.toml
crates/api/src/: app.rs  error.rs  features.rs  lib.rs  main.rs  observability.rs  state.rs
crates/api/src/auth/: config.rs  cookie.rs  custom_oauth.rs  jwt.rs  lockout.rs  middleware.rs  mod.rs  oauth.rs  password.rs  permissions.rs  refresh.rs  session.rs
crates/api/src/gql/: error.rs  loaders.rs  mod.rs  mutations.rs  queries.rs  realtime.rs  scalars.rs  schema.rs  subscriptions.rs  tournament_clock.rs  types.rs
crates/api/src/gql/common/: helpers.rs  mod.rs  types.rs
crates/api/src/gql/domains/: mod.rs
crates/api/src/gql/domains/achievements/: mod.rs  resolvers.rs  service.rs  types.rs
crates/api/src/gql/domains/activity_log/: mod.rs  resolvers.rs  types.rs
crates/api/src/gql/domains/analytics/: mod.rs  resolvers.rs  types.rs
crates/api/src/gql/domains/announcements/: mod.rs  resolvers.rs  service.rs  types.rs
crates/api/src/gql/domains/attendance/: mod.rs  resolvers.rs  service.rs  types.rs
crates/api/src/gql/domains/auth/: mod.rs  resolvers.rs  types.rs
crates/api/src/gql/domains/clubs/: mod.rs  resolvers.rs  service.rs  types.rs
crates/api/src/gql/domains/cosmetics/: mod.rs  resolvers.rs  types.rs
crates/api/src/gql/domains/devices/: mod.rs  resolvers.rs  types.rs
crates/api/src/gql/domains/drinks/: mod.rs  resolvers.rs  service.rs  types.rs
crates/api/src/gql/domains/entries/: mod.rs  resolvers.rs  types.rs
crates/api/src/gql/domains/identity/: mod.rs  resolvers.rs  service.rs  types.rs
crates/api/src/gql/domains/leaderboard_configs/: mod.rs  resolvers.rs  types.rs
crates/api/src/gql/domains/leaderboards/: mod.rs  resolvers.rs  types.rs
crates/api/src/gql/domains/notes/: mod.rs  resolvers.rs  service.rs  types.rs
crates/api/src/gql/domains/predictions/: mod.rs  resolvers.rs  service.rs  types.rs
crates/api/src/gql/domains/pro/: mod.rs  resolvers.rs  types.rs
crates/api/src/gql/domains/registrations/: mod.rs  resolvers.rs  service.rs  types.rs
crates/api/src/gql/domains/results/: mod.rs  resolvers.rs  service.rs  types.rs
crates/api/src/gql/domains/scouting/: mod.rs  resolvers.rs  service.rs  types.rs
crates/api/src/gql/domains/seasons/: mod.rs  quests.rs  resolvers.rs  service.rs  types.rs
crates/api/src/gql/domains/seating/: mod.rs  resolvers.rs  service.rs  types.rs
crates/api/src/gql/domains/series/: mod.rs  resolvers.rs  types.rs
crates/api/src/gql/domains/social/: mod.rs  resolvers.rs  types.rs
crates/api/src/gql/domains/system/: mod.rs  resolvers.rs  types.rs
crates/api/src/gql/domains/templates/: mod.rs  payout_curve.rs  resolvers.rs  types.rs
crates/api/src/gql/domains/tournaments/: clock.rs  mod.rs  recurrence.rs  resolvers.rs  types.rs
crates/api/src/gql/domains/users/: mod.rs  resolvers.rs  types.rs
crates/api/src/gql/root/: mod.rs  mutation_root.rs  query_root.rs
crates/api/src/middleware/: jwt.rs
crates/api/src/routes/: auth.rs  mod.rs  oauth_server.rs  token.rs  unified_auth.rs
crates/api/src/services/: clock_service.rs  data_retention_service.rs  drink_expiry_service.rs  email_service.rs  mod.rs  notification_service.rs  openrouter_service.rs  push_service.rs  subscription_expiry_service.rs  supervisor.rs  vies.rs
crates/api/tests/: auth_tests.rs  check_in_tests.rs  clock_lifecycle_tests.rs  club_tables_test.rs  club_tests.rs  eliminate_player_tests.rs  integration_tests.rs  notification_tests.rs  payouts_tests.rs  permission_tests.rs  player_management_tests.rs  query_coverage_tests.rs  system_tests.rs  table_seating_tests.rs  tournament_clock_tests.rs  tournament_entries_tests.rs  tournament_results_tests.rs  tournament_tests.rs  unassign_table_tests.rs  user_tests.rs
crates/api/tests/common/: mod.rs
crates/api/tests/integration/: announcements.rs  auth.rs  authz_guards.rs  check_in.rs  clock_advance.rs  clock_lifecycle.rs  club.rs  club_roster.rs  club_tables.rs  data_retention.rs  drinks.rs  economy_firewall.rs  eliminate_player.rs  main.rs  money_reconciliation.rs  notification.rs  payouts.rs  permission.rs  player_management.rs  query_coverage.rs  refresh_token_security.rs  system.rs  table_seating.rs  tables_module.rs  tournament.rs  tournament_clock.rs  tournament_entries.rs  tournament_results.rs  unassign_table.rs  user.rs
crates/api/tests/integration/common/: mod.rs
crates/infra/: Cargo.toml
crates/infra/src/: lib.rs  models.rs  pagination.rs  scoring.rs
crates/infra/src/db/: mod.rs
crates/infra/src/repos/: achievements.rs  activity_log.rs  analytics.rs  announcements.rs  attendance.rs  bar_stations.rs  blind_structure_templates.rs  club_managers.rs  club_players.rs  club_tables.rs  clubs.rs  cosmetics.rs  device_tokens.rs  drink_ledger.rs  drink_redemptions.rs  drink_wallet_credentials.rs  drink_wallets.rs  flight_qualifications.rs  friendships.rs  leaderboard_adjustments.rs  leaderboard_configs.rs  mod.rs  notification_preferences.rs  password_reset_tokens.rs  payout_templates.rs  player_deals.rs  player_notes.rs  predictions.rs  privacy.rs  pro_entitlements.rs  quests.rs  redemption_codes.rs  refresh_tokens.rs  registered_players.rs  rivalries.rs  scouting.rs  seasons.rs  table_seat_assignments.rs  tournament_bounties.rs  tournament_clock.rs  (+9 more)
deploy/: README.md  (+3 more)
(+261 files in other folders)
