[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
infra = { path = "../infra" }

# Web server + routing
axum = { version = "0.8", features = ["macros", "ws"] }

# GraphQL
async-graphql = { version = "7", features = ["chrono", "uuid"] }
async-graphql-axum = "7"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"] }

# Async runtime
tokio = { version = "1.39", features = ["full"] }

# Env
dotenvy = "0.15"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }

# Middleware helpers
tower-http = { version = "0.6.6", features = ["trace", "cors", "timeout"] }

# Streams & async utils
tokio-stream = "0.1"
futures-util = "0.3"