[package]
name = "api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
infra = { path = "../infra" }

# Web server + routing
axum = { version = "0.8", features = ["macros", "ws"] }

# GraphQL
async-graphql = { version = "7", features = ["chrono", "uuid", "dataloader", "string_number"] }
async-graphql-axum = "7"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono", "migrate"] }

# Async runtime
tokio = { version = "1.52", features = ["full"] }

# Env
dotenvy = "0.15"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Error reporting (opt-in via SENTRY_DSN). rustls transport to match sqlx and
# avoid an OpenSSL build dependency on the musl/Alpine image.
sentry = { version = "0.48", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
sentry-tracing = "0.48"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Middleware helpers
tower-http = { version = "0.7.0", features = ["trace", "cors", "timeout"] }
tower_governor = "0.8"

# Streams & async utils
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
# Synchronization primitives
parking_lot = "0.12"

# OAuth & Authentication
oauth2 = "5.0"
# The full rust_crypto backend is required (a partial feature set like
# hmac+sha2 panics at runtime: no process-level CryptoProvider). It pulls in
# the rsa crate (RUSTSEC-2023-0071, ignored in .cargo/audit.toml): we sign and
# verify HS256 only, so the vulnerable RSA code paths are never exercised.
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
reqwest = { version = "0.13.4", features = ["json"] }
base64 = "0.22"
rand = "0.10"
bcrypt = "0.19"
sha2 = "0.11"

# HTTP client for OAuth
urlencoding = "2.1"
html-escape = "0.2"

[dev-dependencies]
tokio-test = "0.4"
testcontainers-modules = { version = "0.15", features = ["postgres", "blocking"] }
libc = "0.2"
